# research-public

./: README.md
clap-lang/agda/: CLAP-BASE.agda  CLAP-EXAMPLES.agda  CLAP-INSTANCE.agda  CLAP-MONAD.agda  CLAP-PROPERTIES.agda  CLAPCS.agdai  EGCD.agda  Extra.agda  README.md  clap.agda-lib  notes.org
clap-lang/agda/CLAP/: Base.agda  Field.agda
clap-lang/rust/: Cargo.toml  README.md
clap-lang/rust/base/: Cargo.toml
clap-lang/rust/base/src/: circuit.rs  cs_arith.rs  cs_boolcheck.rs  cs_constant.rs  cs_linear_combination.rs  cs_swap.rs  expr.rs  field.rs  flattened.rs  gate_eq0.rs  gate_inv.rs  gate_iszero.rs  gate_limb_decomposition.rs  gate_split_32.rs  gate_split_and_rotate.rs  lib.rs  lookups.rs  optimizer.rs  table.rs
clap-lang/rust/builder/: Cargo.toml
clap-lang/rust/builder/src/: lib.rs  monadic.rs  poseidon2.rs  poseidon2_params.rs  sha256.rs  vanilla.rs
clap-lang/rust/src/: main.rs
