[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "base"}
builder = { path = "builder" }
cs_derive = { git = "https://github.com/matter-labs/era-boojum.git", branch = "v0.2" }
boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "v0.2"}



[workspace]
members = [
    "builder",
]
