[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.1"
cs_derive = { git = "https://github.com/matter-labs/era-boojum.git", branch = "v0.2" }
boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "v0.2"}
