[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
monadic = "0.5.5"
pairing = { package = "pairing_ce", git = "https://github.com/matter-labs/pairing.git" }
